services/dummy-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-service
  labels:
    app.kubernetes.io/name: dummy-service
    app.kubernetes.io/instance: dummy-service
  namespace: tfm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dummy-service
      app.kubernetes.io/instance: dummy-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dummy-service
        app.kubernetes.io/instance: dummy-service
    spec:
      containers:
      - name: dummy-service
        image: franco87/dummy-service
        imagePullPolicy: Always
        ports:
        - name: http-alt
          containerPort: 8080
          protocol: TCP
