services/dummy-service/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  dummy-service
  labels:
    app.kubernetes.io/name: dummy-service
    app.kubernetes.io/instance: dummy-service
  namespace: tfm
spec:
  selector:
    app.kubernetes.io/name: dummy-service
    app.kubernetes.io/instance: dummy-service
  type: ClusterIP
  ports:
  - name:  http-alt
    port:  8080
    targetPort:  http-alt
